tests/kiama/negative/name_errors/L1/4_whilename1.ob
MODULE whilename;

BEGIN
    WHILE bvar DO
    END
END whilename.
